[package]
name = "grepy"
version = "0.1.0"
authors = ["Jason Leonhard <leonhard.jason@gmail.com>"]
description = "A tool to search files"
license = "MIT"
homepage = "https://github.com/jasonleonhard/grepy"
repository = "https://github.com/jasonleonhard/grepy"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
